--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "./node_modules/mocha/bin/mocha test/server/**/*.js"
+    "test": "./node_modules/mocha/bin/mocha test/server/**/*.js && ./node_modules/karma/bin/karma start"
   },
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-mocks": "^1.4.7",
     "angular-ui-router": "^0.2.15",
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.5",
+    "chai": "^3.4.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "karma": "^0.13.15",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.2.0",
     "mocha": "^2.3.3",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "supertest": "^1.1.0",
     "supertest-as-promised": "^2.0.2"
+  },
+  "devDependencies": {
+    "karma-phantomjs-launcher": "^0.2.1",
+    "phantomjs": "^1.9.18"
   }
 }
